--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@
 
 .content-contact{
 position: relative;
+height: 20%;
+width: 100%;
+border: solid;  
 font-family: 'Abril Fatface', cursive;
 font-size: 16px;
 color:rgba(61,59,54,.5);
