--- a/style.css
+++ b/style.css
@@ -16,5 +16,16 @@ border: solid;
 font-family: 'Abril Fatface', cursive;
 font-size: 16px;
 color:rgba(61,59,54,.5);
+}
 
+.content-Education{
+ position: relative;
+ height: 20%;
+ width: 70% 
+}
+
+.content-headshot {
+ height: 20%;
+ width: 30%;  
+ background-color: red;
 }
