--- a/style.css
+++ b/style.css
@@ -19,12 +19,16 @@ color:rgba(61,59,54,.5);
 }
 
 .content-Education{
+ display: block;
+ float:left;
  position: relative;
  height: 20%;
  width: 70% 
 }
 
 .content-headshot {
+ display: block;
+ float:left; 
  height: 20%;
  width: 30%;  
  background-color: red;
