--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ color:rgba(61,59,54,.5);
 
 .content-Education{
  display: block;
- float:left;
+ float: right;
  position: relative;
  height: 20%;
  width: 70% 
