--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 .content-contact{
 position: relative;
 text-align: center;
-height: 20%;
+height: 40px%;
 width: 100%;
 border: solid;  
 font-family: 'Abril Fatface', cursive;
