--- a/style.css
+++ b/style.css
@@ -22,14 +22,14 @@ color:rgba(61,59,54,.5);
  display: block;
  float: right;
  position: relative;
- height: 20%;
+ height: 30px;
  width: 70% 
 }
 
 .content-headshot {
  display: block;
  float:left; 
- height: 20%;
+ height: 30px%;
  width: 30%;  
  background-color: red;
 }
