--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .Container{
-  Background-color: #BCAAA4;
+  Background-image: url("Mong005e.github.io/texture_background.jpg");
   height: 100%;
   width: 100%;
   border-style: hidden;
@@ -23,7 +23,7 @@ color:rgba(61,59,54,.5);
  float: right;
  position: relative;
  height: 30px;
- width: 30% 
+ width: 50px;
 }
 
 .content-headshot {
