--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .Container{
   Background-image: url("Mong005e.github.io/texture_background.jpg");
+  background-repeat:no-repeat;
   height: 100%;
   width: 100%;
   border-style: hidden;
