--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 .Container{
-  Background-image: url("Mong005e.github.io/texture_background.jpg");
-  background-repeat:no-repeat;
+  Background-color: rgb(206, 203, 192);
   background-size: 100%;
   height: 100%;
   width: 100%;
-  border-style: hidden;
+  border-style: no-border;
 }
 
 
