--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
   background-size: 100%;
   height: 100%;
   width: 100%;
-  border-style: no-border;
+  border-style: none;
+  font-family: 'Abril Fatface', cursive;
+  padding: 1px;
 }
 
 
@@ -13,8 +15,8 @@ position: relative;
 text-align: center;
 height: 40px%;
 width: 100%;
-border: solid;  
-font-family: 'Abril Fatface', cursive;
+border: none;  
+
 font-size: 16px;
 color:rgba(61,59,54,.5);
 }
