--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ text-align: center;
 height: 40px%;
 width: 100%;
 border: none;  
-
+padding: 10px;
 font-size: 16px;
 color:rgba(61,59,54,.5);
 }
