--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
   border-style: none;
   font-family: 'Abril Fatface', cursive;
   padding: 5px;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px
 }
 
 
