--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+ body {
  margin-top: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
- margin-left: 0px
+ margin-left: 0px;
+} 
 
 .Container{
   Background-color: rgb(206, 203, 192);
