--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ color:rgba(61,59,54,.5);
 
 .content-headshot {
 margin-left: 15%;
-    height: 200px;
-    background: black;
+height: 200px;
+border: 2px solid #ffff;
+box-shadow: 10px,10px,5px,5px;
 }
