--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
  margin-left: 0px;
  font: 16px Helvetica, Sans-Serif; 
  padding: 30px;	 
- background-image: url("Mong005e.github.io/186H.jpg");	 
+ background-image: url("Mong005e.github.io/186H.jpg");	
+background-size: cover;	 
 } 
 
 
