--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
  font: 16px Helvetica, Sans-Serif; 
  padding: 30px;	 
  background-image: url("Mong005e.github.io/186H.jpg");	
-background-size: cover;	 
+ background-size: cover;	 
+ color:white;
 } 
 
 
