--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
  padding: 30px;	 
  background-image: url("Mong005e.github.io/186H.jpg");	
  background-size: cover;	 
- color:white;
+ color:#d1cccc;
 } 
 
 
