--- a/style.css
+++ b/style.css
@@ -6,7 +6,11 @@
  font: 16px Helvetica, Sans-Serif; 
  padding: 30px;	 
  background-image: url("Mong005e.github.io/186H.jpg");	
- background-size: cover;	 
+ background-size: cover;
+  background: -webkit-linear-gradient(left,rgba(255,0,0,0),rgba(255,0,0,1)); /*Safari 5.1-6*/
+  background: -o-linear-gradient(right,rgba(255,0,0,0),rgba(255,0,0,1)); /*Opera 11.1-12*/
+  background: -moz-linear-gradient(right,rgba(255,0,0,0),rgba(255,0,0,1)); /*Fx 3.6-15*/
+  background: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1)); /*Standard*/	 
  color:#3064b2;
  float: right;	 
 } 
