--- a/style.css
+++ b/style.css
@@ -5,12 +5,11 @@
  margin-left: 0px;
  font: 16px Helvetica, Sans-Serif; 
  padding: 30px;	 
- background-image: url("Mong005e.github.io/186H.jpg");	
+ 	
  background-size: cover;
-  background: -webkit-linear-gradient(left,rgba(255,0,0,0),rgba(255,0,0,1)); /*Safari 5.1-6*/
-  background: -o-linear-gradient(right,rgba(255,0,0,0),rgba(255,0,0,1)); /*Opera 11.1-12*/
-  background: -moz-linear-gradient(right,rgba(255,0,0,0),rgba(255,0,0,1)); /*Fx 3.6-15*/
-  background: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1)); /*Standard*/	 
+  background: #eb01a5;
+  background-image: url("Mong005e.github.io/186H.jpg");  /* fallback */
+  background-image: url("IMAGE_URL"), linear-gradient(#eb01a5, #d13531); /* W3C */	 
  color:#3064b2;
  float: right;	 
 } 
