--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@
  margin-right: 0px;
  margin-bottom: 0px;
  margin-left: 0px;
- font: 16px Helvetica, Sans-Serif; 
+ font-family: 'Permanent Marker', cursive, sans-serif; 
  padding: 30px;	 
  background-size: cover;
- background: #eb01a5;
+ background: #423e31;
  color:#3064b2;
  float: right;	 
 } 
