--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
  margin-right: 0px;
  margin-bottom: 0px;
  margin-left: 0px;
- font-family: 'Permanent Marker', cursive, sans-serif; 
+ font-family: 'Permanent Marker', cursive; 
  padding: 30px;	 
  background-size: cover;
  background: #423e31;
