--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@
  margin-right: 0px;
  margin-bottom: 0px;
  margin-left: 0px;
- font-family: 'Permanent Marker', cursive; 
+ font-family: 'Permanent Marker'; 
  padding: 30px;	 
  background-size: cover;
  background: #423e31;
  color:#3064b2;
- float: right;	 
+	 
 } 
 
 
