--- a/style.css
+++ b/style.css
@@ -8,25 +8,25 @@
  background-size: cover;
  background: #423e31;
  color:#3064b2;
-	 
 } 
 
 
 
-}
-
 /*#button {
 	margin-left: 40%;
 	margin-right: 40%;
-	background-color: #213862;*/
+	background-color: #213862;
 
 	border-radius: 15px;
-	height: 100px;
+	height: 100px;*/
 }
 
 #container {
 	width: 800px;
 	margin: 40px auto 60px;
+}
+#photo{
+border: 2px solid #fff;
 }
 
 #contact {
