--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
 	width: 100%;
 	margin: 0 0 16px 0;
 	padding: 0 0 16px 0;
+	text-align: center;
 }
 
 
@@ -45,8 +46,12 @@
 }*/
 
 #professionalheader {
-	font-size: 28px;
+	font-size: 25px;
 }
+
+#hendricksen {
+border-top: 1px solid #999;	
+}	
 
 /*.date {
 	float: right;
