--- a/style.css
+++ b/style.css
@@ -9,7 +9,10 @@
  background: #423e31;
  color:#999;
 } 
-
+h1,h2,h3,h4,h5,h6,h7{
+font-size: 16px;
+}
+	
 
 
 /*#button {
@@ -45,24 +48,32 @@
 	font-size: 20px;
 }*/
 
-#professionalheader {
+#professional-header {
 	font-size: 25px;
 	text-align: center;
+	margin: 0 0 16px 0;
+}
+
+#hendricksen-header {
+font-size: 25px
+margin: 0 0 16px 0;
+
 }
 
 #hendricksen {
 border-top: 1px solid #999;	
 }	
 
-/*.date {
-	float: right;
+#sneaker-header {
 }
 
-h3 {
-	border-bottom: 1px solid #999;
+#education-header {
 }
 
-h4{
-	margin-top: 0px;
-	margin-bottom: 0px;
+#education {
 }
+
+
+
+
+
