--- a/style.css
+++ b/style.css
@@ -1,27 +1,21 @@
  body {
- margin-top: 0px;
- margin-right: 0px;
- margin-bottom: 0px;
- margin-left: 0px;
- font-family: 'Permanent Marker'; 
- padding: 30px;	 
- background-size: cover;
- background: #423e31;
- color:#999;
+ 	margin-top: 0px;
+ 	margin-right: 0px;
+ 	margin-bottom: 0px;
+ 	margin-left: 0px;
+ 	font-family: 'Permanent Marker'; 
+ 	padding: 30px;	 
+ 	background-size: cover;
+ 	background: #423e31;
+ 	color:#999;
 } 
-h1,h2,h3,h4,h5,h6,h7{
-font-size: 16px;
+
+h1,h2,h3,h4,h5,h6,h7,h8,h9,h10{
+	font-size: 16px;
 }
-	
 
-
-/*#button {
-	margin-left: 40%;
-	margin-right: 40%;
-	background-color: #213862;
-
-	border-radius: 15px;
-	height: 100px;*/
+p{
+	font-size: 10px;
 }
 
 #container {
@@ -40,14 +34,6 @@ font-size: 16px;
 	border-bottom: 1px solid #999;
 }
 
-/*#content-summarycontent {
-	margin: 0 0 16px 0;
-	padding: 0 0 32px 0;
-
-	font-style: italic;
-	font-size: 20px;
-}*/
-
 #professional-header {
 	font-size: 25px;
 	text-align: center;
@@ -55,8 +41,8 @@ font-size: 16px;
 }
 
 #hendricksen-header {
-font-size: 25px
-margin: 0 0 16px 0;
+	font-size: 25px
+	margin: 0 0 16px 0;
 
 }
 
@@ -65,9 +51,13 @@ border-top: 1px solid #999;
 }	
 
 #sneaker-header {
+	border-top: 1px solid #999;
+	text-align: center;
 }
 
 #education-header {
+	border-top: 1px solid #999;
+	text-align: center;
 }
 
 #education {
