--- a/style.css
+++ b/style.css
@@ -11,11 +11,11 @@
 } 
 
 h1,h2,h3,h4,h5,h6,h7,h8,h9,h10{
-	font-size: 16px;
+	font-size: 30px;
 }
 
 p{
-	font-size: 10px;
+	font-size: 16px;
 }
 
 #container {
@@ -30,19 +30,19 @@ p{
 #contact {
 	margin: 0 0 16px 0;
 	padding: 0 0 16px 0;
-	font-size: 20px;
+	font-size: 30px;
 	letter-spacing: 1px;
 	border-bottom: 1px solid #999;
 }
 
 #professional-header {
-	font-size: 25px;
+	font-size: 30px;
 	text-align: center;
 	margin: 0 0 16px 0;
 }
 
 #hendricksen-header {
-	font-size: 25px
+	font-size: px
 	margin: 0 0 16px 0;
 	text-align: center;
 
