--- a/style.css
+++ b/style.css
@@ -32,11 +32,13 @@ p{
 
 
 #contact {
+	text-align: center;
 	margin: 0 0 16px 0;
 	padding: 0 0 16px 0;
 	font-size: 30px;
 	letter-spacing: 1px;
 	border-bottom: 1px solid #999;
+	
 }
 
 #professional-header {
