--- a/style.css
+++ b/style.css
@@ -24,9 +24,9 @@ p{
 
 #container {
 	width: 100%;
-	margin: 0 0 16px 0;
+	margin: 40px 40px 16px 40px;
 	padding: 0 0 16px 0;
-	text-align: center;
+	text-align: left;
 	
 	
 }
