--- a/style.css
+++ b/style.css
@@ -66,12 +66,17 @@ border-top: 1px solid #999;
 	text-align: center;
 }
 
+#sneaker {
+	border-top: 1px solid #999;
+}
+
 #education-header {
 	border-top: 1px solid #999;
 	text-align: center;
 }
 
 #education {
+	border-top: 1px soldi #999
 }
 
 
