--- a/style.css
+++ b/style.css
@@ -9,8 +9,11 @@
  	background: #423e31;
  	color:#999;
 } 
+h1,h2,h3,h8{
+	font-size: 30px;
+}	
 
-h1,h2,h3,h4,h5,h6,h7,h8,h9,h10{
+h4,h5,h6,h7,h9,h10{
 	font-size: 24px;
 }
 
